mabe fix music